# projectI

./: README.md  app.py  main.py  pyproject.toml
notebook/: eval-ner.ipynb  finetune-gliner.ipynb  finetune-standard-ner.ipynb
src/: __init__.py  models.py  ner.py  pipeline.py  preprocessing.py  re_module.py  visualization.py
