[project]
name = "projecti"
version = "0.1.0"
description = "Medical Information Extraction Pipeline for Vietnamese"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.5.0",
    "gliner>=0.2.24",
    "huggingface-hub>=1.3.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "py-vncorenlp>=0.1.4",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "sentencepiece>=0.2.1",
    "streamlit>=1.53.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
